internal/gitops/templates/cluster-apps-base/services/kube-prometheus-stack/custom-prometheus-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-gateway-route
  namespace: observability
spec:
  hostnames:
    - "prometheus.prosys.dev.dfw3.k8s.opencenter.cloud"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: rmpk-gateway
      namespace: observability
      sectionName: prometheus-https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: observability-kube-prometh-prometheus
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
